[tool.poetry]
name = "beedumper"
version = "0.1.2"
description = "Exporting SupportBee data for better integration with other ticketing tools"
authors = ["Jorge Sanz <jsanz@carto.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/CartoDB/beedumper"
keywords = [ "supportbee", "backup"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Customer Service",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.6",
    "Topic :: Office/Business",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Archiving :: Backup ",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
include= ["config.template.yaml"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.21"
PyYAML = "^5.1"
click = "^7.0"
pathos = "^0.2.3"

[tool.poetry.dev-dependencies]
jupyterlab = "^0.35.4"
ipdb = "^0.12.0"
ipython = "^7.4"
pandas = "^0.24.2"
matplotlib = "^3.0"
dateparser = "^0.7.1"

[tool.poetry.scripts]
beedumper = "beedumper.cli:cli"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

